# zhenya_bot

./: Bot.hs  zhenya_bot.cabal
Bot/: IO.hs
Bot/Component/: Command.hs  Conditional.hs  Fuzzy.hs  Regex.hs  Timer.hs
Bot/Component/Impl/: FileSearch.hs
