Name:           ZhenyaBot
Version:        1.0
Cabal-Version:  >= 1.2
Author:         Jesse Frankley, Will Coster
Homepage:       https://github.com/numberten/zhenya_bot
Category:       Network
Synopsis:       An IRC bot with a passion for nonsense.
Maintainer:     Jesse Frankley
Build-Type:     Simple
Description:    A IRC bot used for many purposes. Also used as Haskell
                playground and learning project.

source-repository head
   type:        git
   location:    https://github.com/numberten/zhenya_bot

Executable zhenya_bot
    ghc-options:    -W
    Main-Is:        Main.hs
    Build-Depends:  base
                 ,  bytestring              >=  0.9
                 ,  cmdargs                 >=  0.9
                 ,  containers              >=  0.4
                 ,  curl                    >=  1.3
                 ,  directory               >=  1.1
                 ,  download-curl           >=  0.1.4
                 ,  exceptions              >=  0.1
                 ,  filepath                >=  1.3
                 ,  hierarchical-clustering >=  0.4
                 ,  HTTP                    >=  4000.2.8
                 ,  lcs                     >=  0.2
                 ,  mtl                     >=  2.0
                 ,  network                 >=  2.3
                 ,  old-time                >=  1.1
                 ,  random                  >=  1.0
                 ,  random-fu               >=  0.2
                 ,  regex-tdfa              >=  1.0
                 ,  stm                     >=  2.4.2
                 ,  strict                  >=  0.3
                 ,  tagsoup                 >=  0.12
                 ,  time                    >=  1.4
                 ,  tokenize                >=  0.1
                 ,  transformers            >=  0.2
                 
    other-modules:  Bot
                 ,  Bot.Component
                 ,  Bot.IO
                 ,  Bot.Time
                 ,  Bot.Component.Combinator
                 ,  Bot.Component.Command
                 ,  Bot.Component.Conditional
                 ,  Bot.Component.Fuzzy
                 ,  Bot.Component.Regex
                 ,  Bot.Component.Stateful
                 ,  Bot.Component.Timer
                 ,  Bot.Component.Impl.Dictionary
                 ,  Bot.Component.Impl.FileSearch
                 ,  Bot.Component.Impl.Github
                 ,  Bot.Component.Impl.Goodbye
                 ,  Bot.Component.Impl.Grep
                 ,  Bot.Component.Impl.History
                 ,  Bot.Component.Impl.Lists
                 ,  Bot.Component.Impl.Loop
                 ,  Bot.Component.Impl.NGram
                 ,  Bot.Component.Impl.NickCluster
                 ,  Bot.Component.Impl.Op
                 ,  Bot.Component.Impl.PingPong
                 ,  Bot.Component.Impl.Reboot
                 ,  Bot.Component.Impl.Roll
                 ,  Bot.Component.Impl.Seen
                 ,  Bot.Component.Impl.Spotify
                 ,  Bot.Component.Impl.Stalker
                 ,  Bot.Component.Impl.Uptime
                 ,  Bot.Component.Impl.Youtube
